<resources>
    <string name="app_name">添乘仪</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="clear">清空记录</string>
    <string name="on_off">结束/开始</string>
    <string name="station_track">站内/线路</string>
    <string name="menu_search">查找</string>
    <string name="menu_analysis">二次分析</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about_us">关于</string>
    <string name="home_page">首页</string>
    <string name="platform_thrshld">站内强度阀值</string>
    <string name="track_thrshld">线路强度阀值</string>
    <string name="level_1_lbl">一级：</string>
    <string name="level_2_lbl">二级：</string>
    <string name="level_green">一级</string>
    <string name="level_yellow">二级</string>
    <string name="level_red">三级</string>
    <string name="history_apl">综合强度</string>
    <string name="history_apl_x">水平检测</string>
    <string name="history_apl_z">高低检测</string>
    <string name="history_time">发生时间</string>
    <string name="history_lon">经度</string>
    <string name="history_lat">纬度</string>
    <string name="history_speed">速度km/h</string>
    <string name="history_loc">定位</string>
    <string name="clear_history">记录已清空</string>
    <string name="no_sdcard">无外部存储，系统将退出!</string>
    <string name="license_lbl">请输入授权码</string>
    <string name="input_again">授权码错误，请重新输入！</string>
    <string name="addr_lbl">地址：</string>
    <string name="speed_lbl">速度：</string>
</resources>
