<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--
        <item
            android:id="@id/action_search"
            android:icon="@mipmap/ic_search"
            android:title="@string/menu_search"
            app:showAion="ifRoom" />

        <item
            android:id="@id/action_analysis"
            android:icon="@mipmap/ic_notifications"
            android:title="@string/menu_analysis"
            app:showAsAction="ifRoom" />
    -->
    <item
        android:id="@id/action_analysis"
        android:icon="@mipmap/ic_search"
        android:orderInCategory="100"
        android:title="@string/menu_analysis"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/action_settings"
        android:orderInCategory="101"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@id/action_about"
        android:orderInCategory="102"
        android:title="@string/menu_about_us"
        app:showAsAction="never" />
</menu>