<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fcao.quakemonitor.QuakeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_0176da"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        app:logo="@mipmap/ic_launcher"
        toolbar:popupTheme="@style/Theme.ToolBar.ZhiHu">

    </android.support.v7.widget.Toolbar>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/tip_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <TextView
            android:id="@+id/monitor_lbl"
            android:layout_width="64dp"
            android:layout_height="21dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/on_off"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Switch
            android:id="@+id/monitor_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:checked="true"
            android:textOff="OFF"
            android:textOn="ON"
            app:layout_constraintBottom_toBottomOf="@+id/monitor_lbl"
            app:layout_constraintLeft_toRightOf="@+id/monitor_lbl"
            app:layout_constraintTop_toTopOf="@+id/monitor_lbl"
            tools:checked="true"/>

        <TextView
            android:id="@+id/platform_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/platform"
            app:layout_constraintBottom_toBottomOf="@+id/monitor_lbl"
            app:layout_constraintRight_toLeftOf="@+id/platform_switch"
            app:layout_constraintTop_toTopOf="@+id/monitor_lbl"
            app:layout_constraintVertical_bias="0.0"/>

        <Switch
            android:id="@+id/platform_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:checked="true"
            android:textOff="OFF"
            android:textOn="ON"
            app:layout_constraintBottom_toBottomOf="@+id/platform_lbl"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/platform_lbl"
            tools:checked="true"/>

        <TextView
            android:id="@+id/loc_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/addr_lbl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/loc_msg"
            app:layout_constraintLeft_toRightOf="@+id/loc_msg"
            app:layout_constraintTop_toTopOf="@+id/loc_msg"/>

        <TextView
            android:id="@+id/speed_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_lbl"
            app:layout_constraintBottom_toBottomOf="@+id/addr"
            android:layout_marginBottom="0dp"
            app:layout_constraintTop_toTopOf="@+id/addr"
            android:layout_marginTop="0dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/addr"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/speed_lbl"
            app:layout_constraintLeft_toRightOf="@+id/speed_lbl"
            app:layout_constraintTop_toTopOf="@+id/speed_lbl"
            app:layout_constraintVertical_bias="0.0"/>

        <ImageView
            android:id="@+id/home_loc"
            android:layout_width="33dp"
            android:layout_height="36dp"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="8dp"
            android:src="@mipmap/ic_loc"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/speed"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/speed"
            android:layout_marginTop="0dp"
            app:layout_constraintVertical_bias="0.481"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/show_graph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <RelativeLayout
            android:id="@+id/show_graph_tot"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"/>

        <RelativeLayout
            android:id="@+id/show_graph_x"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"/>


        <RelativeLayout
            android:id="@+id/show_graph_z"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>